# my_sin_lab

./: CMakeLists.txt  README.md
my_sin/: CMakeLists.txt  my_sin.cpp  my_sin.h
my_sin/tests/: CMakeLists.txt  tests.cpp
